WaveShaperNode should not output silence when it has no input or when input is silence https://bugs.webkit.org/show_bug.cgi?id=215574

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Rebaseline existing test now that all checks are passing.

* web-platform-tests/webaudio/the-audio-api/the-waveshapernode-interface/silent-inputs-expected.txt:

Source/WebCore:

WaveShaperNode should not output silence when it has no input or when input is silence.
It should still apply its curve to the silent input.

No new tests, rebaselined existing test.

* Modules/webaudio/AudioNode.cpp:
(WebCore::AudioNode::disableOutputsIfNecessary):
Do not disable the WaveShaperNode's output when its has no input. The WaveShaperNode
may still provide non-silent output when it has no input.

* Modules/webaudio/WaveShaperNode.cpp:
(WebCore::WaveShaperNode::propagatesSilence const):
* Modules/webaudio/WaveShaperNode.h:
Override propagatesSilence() to return false when the WaveShaperNode has a curve to apply,
so that we ask the node to process the input even when it is silence.


Canonical link: https://commits.webkit.org/228332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265765 268f45cc-cd09-0410-ab3c-d52691b4dbfc